# weaviate

./: .bithoundrc  .codeclimate.yml  .codecov.yml  .dockerignore  .eslintignore  .eslintrc  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .mockery.yaml  .pre-commit-config.yaml  .project  .protolint.yaml  .sonarcloud.properties  .tool-versions  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  DEPENDENCIES.csv  Dockerfile  Dockerfile-prod  Dockerfile.cuda  Dockerfile.dev  IMPLEMENTATION_NOTES.md  LICENSE  LICENSE-DEPENDENCIES.csv  LICENSE-DEPENDENCIES.md  LICENSE.md  Makefile  PR_DESCRIPTION.md  README.md  README_cuvs.md  action-schema-test.json  add_header.sh  (+69 more)
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
Commands/: AclEntries.js  AuthorizedApps.js  Commands.js  Devices.js  Events.js  ModelManifests.js  PersonalizedInfos.js  Places.js  RegistrationTickets.js  Rooms.js  Subscriptions.js
Endpoints/: AclEntries.js  Adapters.js  AuthorizedApps.js  Commands.js  Devices.js  Events.js  ModelManifests.js  PersonalizedInfos.js  Places.js  RegistrationTickets.js  Rooms.js  Subscriptions.js
Helpers/: Db.js  ErrorHandling.js  RESTRender.js
OpenAPI-Specification/: schema.json
adapters/: init.go
artifacts/: rebase-notes-decouple.md
auth/: authorisation.go
broker/: weaviate_broker.go
ci/: create_docker_tag.sh  create_manifests.sh  docker_report.md.tpl  (+4 more)
test/conditional_writes_clientcheck/: README.md  pyproject.toml  verify.py
(+13163 files in other folders)
