[project]
name = "conditional-writes-clientcheck"
version = "0.1.0"
description = "Client-side verification of Weaviate conditional writes (Phase 1: insert_if_not_exists)"
requires-python = ">=3.11"
dependencies = [
    "weaviate-client>=4.9,<5",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = []
